--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -86,7 +86,7 @@ The exploitation rate time series is a large source of uncertainty for Interior 
 
 We use three alternative ways to characterize CU status when developing LRPs for Interior Fraser Coho: 1) multidimensional status estimates derived from the Pacific Salmon Status Scanner, 2) CU-level abundance relative to S~gen~ as a lower benchmark on abundance, and 3) Distribution of spawning abundance relative to distributional targets developed by the IFCRT. 
 
-The first approach, which uses the Salmon Scanner tool developed by the State of the Salmon program (Section \@ref(rapidToolMethods)), is consistent with Canada's WSP and is recommended by Holt et al. (in review) as the method that should be used to estimate CU status for proportional reference points when a recent WSP status assessment is not available. The other two approaches are primarily used to develop aggregate abundance LRPs in this case study, as well as for a point of comparison with the Salmon Scanner tool.
+The first approach, which uses the Salmon Scanner tool developed by the State of the Salmon program (Section \@ref(rapidToolMethods)), is consistent with Canada's WSP and is recommended by Holt et al. (in review) as the method that should be used to estimate CU status for CU status-based reference points when a recent WSP status assessment is not available. The other two approaches are primarily used to develop aggregate abundance LRPs in this case study, as well as for a point of comparison with the Salmon Scanner tool.
 
 
 The second approach is based on comparing the current abundance of each CU to its CU-specific estimate of S~gen~, where CU status is considered Red when abundance drops below S~gen~. The value of S~gen~ represents the number of spawners required to recover to S~MSY~ (spawners at maximum sustainable yield) within one generation, under equilibrium conditions in the absence of fishing [@holtIndicatorsStatusBenchmarks2009]. S~gen~ is one of several benchmarks available for assigning multidimensional CU status in WSP Integrated Status Assessments and the Salmon Scanner; it represents a lower benchmark between Red and Amber status zones and was used as part of the 2014 Integrated Status Assessment for Interior Fraser Coho [@dfoWildSalmonPolicy2015]. While estimates of CU status relative to S~gen~ is a readily available output from the Salmon Scanner tool, we calculated this metric external to the tool for our case study. 
@@ -220,19 +220,21 @@ knitr::include_graphics("figure/coho-compare-SRFits-IM.png")
 
 ## LRP ESTIMATION: PROPORTION OF CUS
 
+*\textcolor{cyan}{LW: what should this heading be now? LRP ESTIMATION: CU STATUS-BASED?}*
+
 ### Methods
 
-To derive proportional LRPs, we calculated the proportion of CUs that had multidimensional statuses from the Pacific Salmon Status Scanner above the Red zone. Status was assessed as being below the LRP in years in which one or more CUs assessed as having Red status. Both Ricker model formulations described above were used to estimate abundance-based benchmarks (lower benchmark \= S~gen~ and upper benchmark \= 0.8S~MSY~) when assessing status with the Pacific Salmon Status Scanner: the base Ricker model and the Ricker_priorCap model. Estimates of S~gen~ and S~MSY~ were estimated using all data available up to 2020.
+To derive CU status-based LRPs, we calculated the proportion of CUs that had multidimensional statuses from the Pacific Salmon Status Scanner above the Red zone. Status was assessed as being below the LRP in years in which one or more CUs assessed as having Red status. Both Ricker model formulations described above were used to estimate abundance-based benchmarks (lower benchmark \= S~gen~ and upper benchmark \= 0.8S~MSY~) when assessing status with the Pacific Salmon Status Scanner: the base Ricker model and the Ricker_priorCap model. Estimates of S~gen~ and S~MSY~ were estimated using all data available up to 2020.
 
 
 For comparison, we also calculated LRPs from the proportion of CUs that had recent generational average (3-year) spawning abundance greater than S~gen~ and from the proportion of CUs that failed to meet the IFCRT distributional target of at least half of all sub-populations within each CU having more than 1000 spawners.  
 
 ### Results
 
-Estimates of S~gen~ based on the Ricker_priorCap model were higher than those based on the base Ricker model for four of the five CUs (Middle Fraser, Lower Thompson, North Thompson, and South Thompson) and were approximately equal for the fifth CU (Fraser Canyon; Appendix \@ref(app:coho-appendix)). As a result, generational average spawning abundance was more likely to drop below S~gen~ when it was estimated using the Ricker_priorCap model. Under the base Ricker model formulation, generational average spawning abundance remained above S~gen~ for all years between 2000 and 2020 (Figure \@ref(fig:coho-CU-multiDim-Ricker)).  In comparison, under the Ricker_priorCap formulation, generational average abundance dropped below S~gen~ for 5 of the 21 years between 2000 and 2020. These occurrences included the Lower Thompson CU (2006), the Middle Fraser CU (2006, 2008), and the South Thompson CU (2000, 2006, 2007, 2015; Figure \@ref(fig:coho-CU-multiDim-Ricker-Cap)).  All five CUs had spawning abundances above S~gen~ in 2020, regardless of which spawner recruitment model was used, indicating that the stock would be above a proportional LRP based on S~gen~.
+Estimates of S~gen~ based on the Ricker_priorCap model were higher than those based on the base Ricker model for four of the five CUs (Middle Fraser, Lower Thompson, North Thompson, and South Thompson) and were approximately equal for the fifth CU (Fraser Canyon; Appendix \@ref(app:coho-appendix)). As a result, generational average spawning abundance was more likely to drop below S~gen~ when it was estimated using the Ricker_priorCap model. Under the base Ricker model formulation, generational average spawning abundance remained above S~gen~ for all years between 2000 and 2020 (Figure \@ref(fig:coho-CU-multiDim-Ricker)).  In comparison, under the Ricker_priorCap formulation, generational average abundance dropped below S~gen~ for 5 of the 21 years between 2000 and 2020. These occurrences included the Lower Thompson CU (2006), the Middle Fraser CU (2006, 2008), and the South Thompson CU (2000, 2006, 2007, 2015; Figure \@ref(fig:coho-CU-multiDim-Ricker-Cap)).  All five CUs had spawning abundances above S~gen~ in 2020, regardless of which spawner recruitment model was used, indicating that the stock would be above a CU status-based LRP based on S~gen~.
 
 
-The frequency of years in which the IFCRT distributional target failed to be met for one or more CUs was similar to that observed when S~gen~ based on the Ricker_priorCap was used, with distributional targets not met in 4 of the 21 years between 2000 and 2020 (breached in 2006, 2015-2017). Eight of the 11 sub-populations had generational average escapement drop below the 1000 spawner threshold in one or more years (Figure \@ref(fig:coho-Subpop-timeseries)). Sub-populations tended to differ in which years they dropped below the 1000 spawner threshold, which meant that the distributional target of at least half of the sub-populations within each CU with greater than 1000 fish was more often met than not. All 11 sub-populations had generational average spawning abundances above 1000 spawners in 2020, indicating that the stock would be well above a proportional LRP based on the IFCRT-distributional target (Figure \@ref(fig:coho-Subpop-timeseries)).
+The frequency of years in which the IFCRT distributional target failed to be met for one or more CUs was similar to that observed when S~gen~ based on the Ricker_priorCap was used, with distributional targets not met in 4 of the 21 years between 2000 and 2020 (breached in 2006, 2015-2017). Eight of the 11 sub-populations had generational average escapement drop below the 1000 spawner threshold in one or more years (Figure \@ref(fig:coho-Subpop-timeseries)). Sub-populations tended to differ in which years they dropped below the 1000 spawner threshold, which meant that the distributional target of at least half of the sub-populations within each CU with greater than 1000 fish was more often met than not. All 11 sub-populations had generational average spawning abundances above 1000 spawners in 2020, indicating that the stock would be well above a CU status-based LRP based on the IFCRT-distributional target (Figure \@ref(fig:coho-Subpop-timeseries)).
 
 \newpage
 ```{r coho-CU-multiDim-Ricker, fig.cap="Escapement time series for Interior Fraser Coho CUs shown as annual escapements (lines) and 3-year geometric mean escapements (dots). First geometric mean includes years 1998-2000. Grey dots indicate years when all CUs had multidimensional Salmon Scanner assessments above Red when S\\textsubscript{gen} was estimated using the Ricker model, while red dots indicate when one or more CUs had assessments in the Red zone, which would trigger a breach of the LRP. Orange lines show estimated S\\textsubscript{gen}.", warning=FALSE, echo=FALSE, out.width= '80%', fig.align="center"}
@@ -254,10 +256,11 @@ knitr::include_graphics("figure/coho-Subpop-EscpSeries-wStatus.png")
 Multidimensional status derived from the Salmon Scanner is driven by abundance metrics for this SMU. Because absolute abundance data and benchmarks based on S~gen~ and S~MSY~ were available, the multidimensional algorithm within the Salmon Scanner (Figure \@ref(fig:decision-tree)) most often assigned CU status based on this metric (Figures \@ref(fig:coho-CU-multiDim-Ricker) and \@ref(fig:coho-CU-multiDim-Ricker-Cap)). Though status in some cases was also influenced by absolute abundance relative to the threshold of 1500 spawners. This occurred in the Fraser Canyon CU between 2015 and 2017. In these years, the generational average of absolute spawning abundance was < 1500 spawners and the CU was assigned Red status under the first node of the decision tree even though spawning abundances are above S~gen~.
 
  
-The total number of years in which an LRP would have been breached using the multidimensional approach depended on which Ricker stock recruitment model was used to estimate S~gen~.  When status was assessed using abundance-based benchmarks estimated from the base Ricker model, a proportional LRP for the SMU would have been breached in 4 of 21 years. For three of these years, the breach was based on Fraser Canyon spawning abundances dropping below 1500 spawners (2015-2017), while for the one additional year (2000) it was due to the Lower Thompson CU having spawning abundance < S~gen~ (Figure \@ref(fig:coho-CU-multiDim-Ricker)). In comparison, when status was assessed using abundance-based benchmarks from the Ricker_priorCap model, a proportional LRP would have been breached in 9 of 21 years (2000-2001, 2005-2007, 2010, 2015-2017; Figure \@ref(fig:coho-CU-multiDim-Ricker-Cap)). For both stock-recruitment models, multidimensional status from the Salmon Scanner was above Red for all CUs based on the most recent generational average, indicating that the SMU is currently above a proportional LRP, regardless of spawner recruitment model.
+The total number of years in which an LRP would have been breached using the multidimensional approach depended on which Ricker stock recruitment model was used to estimate S~gen~.  When status was assessed using abundance-based benchmarks estimated from the base Ricker model, a CU status-based LRP for the SMU would have been breached in 4 of 21 years. For three of these years, the breach was based on Fraser Canyon spawning abundances dropping below 1500 spawners (2015-2017), while for the one additional year (2000) it was due to the Lower Thompson CU having spawning abundance < S~gen~ (Figure \@ref(fig:coho-CU-multiDim-Ricker)). In comparison, when status was assessed using abundance-based benchmarks from the Ricker_priorCap model, a CU status-based LRP would have been breached in 9 of 21 years (2000-2001, 2005-2007, 2010, 2015-2017; Figure \@ref(fig:coho-CU-multiDim-Ricker-Cap)). For both stock-recruitment models, multidimensional status from the Salmon Scanner was above Red for all CUs based on the most recent generational average, indicating that the SMU is currently above a CU status-based LRP, regardless of spawner recruitment model.
 
 
 ## LRP ESTIMATION: AGGREGATE ABUNDANCE, LOGISTIC REGRESSION LRPS
+
 
 ### Methods{#logistic}
 
@@ -575,18 +578,18 @@ knitr::include_graphics("figure/coho-statusPlot_withBars2020.png")
 ```
 
 
-We show historical results for three types of proportional LRP methods: using the proportion of CUs with Pacific Salmon Status Scanner status > Red (e.g., Prop: Scanner-Ricker), using the proportion of CUs with abundance > Sgen (e.g., Prop: Sgen-Ricker), and using the IFCRT distributional target status (Prop: IFCRT) . Holt et al. (in review) recommend CU statuses be derived from the multidimensional approach used within the Salmon Scanner; however, we show results for the single metric S~gen~ and IFCRT approaches to demonstrate how these approaches impact SMU status. This comparison is of interest because our aggregate abundance LRPs use status estimates based on a single metric rather than a multidimensional approach.   
+We show historical results for three types of CU status-based LRP methods: using the proportion of CUs with Pacific Salmon Status Scanner status > Red (e.g., Prop: Scanner-Ricker), using the proportion of CUs with abundance > Sgen (e.g., Prop: Sgen-Ricker), and using the IFCRT distributional target status (Prop: IFCRT) . Holt et al. (in review) recommend CU statuses be derived from the multidimensional approach used within the Salmon Scanner; however, we show results for the single metric S~gen~ and IFCRT approaches to demonstrate how these approaches impact SMU status. This comparison is of interest because our aggregate abundance LRPs use status estimates based on a single metric rather than a multidimensional approach.   
 
 
-In addition to the LRP estimation methods presented so far in this case study, we include the full WSP assessment that was conducted in 2014 as an option for estimating CU status for use in a proportional LRP. We label this case "Prop : WSP-2014". SMU status would have been assessed as being above the LRP at this time as all CUs were assessed as Amber or Amber/Green.  
+In addition to the LRP estimation methods presented so far in this case study, we include the full WSP assessment that was conducted in 2014 as an option for estimating CU status for use in a CU status-based LRP. We label this case "Prop : WSP-2014". SMU status would have been assessed as being above the LRP at this time as all CUs were assessed as Amber or Amber/Green.  
 
 
 In general, estimated LRP breaches coincided with low points in the aggregate abundance time series (2000, 2005 - 2007 and 2015-2017). However, there were differences among methods in the years that SMU status was estimated to be below the LRP, as well as a couple methods for which status was never estimated to be below the LRP (Prop: Sgen-Ricker and Abund: Logistic: IFCRT).  
 
-Comparison of SMU status estimates over time for all LRP estimation methods that used S~gen~ from the base Ricker model showed differences in statuses between the proportion- and aggregate abundance methods (status bars 2-5 in Figure \@ref(fig:coho-statusPlot-withBars)). Under the 'Prop: Scanner-Ricker' method, the LRP was breached in years 2000 and 2015-2017, but for the 'Prop: Sgen-Ricker' method, the LRP was only breached in the year 2000. The multidimensional algorithm includes a step in which CU status is designated as Red when the generational mean spawning abundance is less than 1500 spawners (Figure \@ref(fig:decision-tree)). Because estimated S~gen~ is less than 1500 spawners for the Fraser Canyon CU, it is possible for the criteria of <1500 spawners in a CU to be breached even though abundance exceeds S~gen~. This situation occured for the Fraser Canyon CU in 2015-2017. Therefore, LRP methods that use the multidimensional approah to characterize CU status can be more precautionary than methods that rely on a single S~gen~ benchmark.
+Comparison of SMU status estimates over time for all LRP estimation methods that used S~gen~ from the base Ricker model showed differences in statuses between the CU status-based and aggregate abundance methods (status bars 2-5 in Figure \@ref(fig:coho-statusPlot-withBars)). Under the 'Prop: Scanner-Ricker' method, the LRP was breached in years 2000 and 2015-2017, but for the 'Prop: Sgen-Ricker' method, the LRP was only breached in the year 2000. The multidimensional algorithm includes a step in which CU status is designated as Red when the generational mean spawning abundance is less than 1500 spawners (Figure \@ref(fig:decision-tree)). Because estimated S~gen~ is less than 1500 spawners for the Fraser Canyon CU, it is possible for the criteria of <1500 spawners in a CU to be breached even though abundance exceeds S~gen~. This situation occured for the Fraser Canyon CU in 2015-2017. Therefore, LRP methods that use the multidimensional approah to characterize CU status can be more precautionary than methods that rely on a single S~gen~ benchmark.
 
 
-In the years 2005-2006, SMU status for both the 'Abund: Proj: Sgen-Ricker' and 'Abund: Logistic:Sgen-Ricker' methods fell below the LRP, while the proportional methods (labelled 'Prop:') did not. Declines in aggregate SMU abundance in 2005-2006 were driven by declines in the four larger CUs (which, still remained above their individual S~gen~ estimates). Declines in the  abundance of the Fraser Canyon CU were not as drastic. As a result, while SMU-level aggregate abundance dropped below the abundance LRP, the Fraser Canyon CU that triggered Red status in 2015-2017 exceeded 1500 spawners and did not trigger the Prop: Scanner-Ricker method. The aggregate abundance LRP from the 'Abund: Proj: Sgen-Ricker' estimation method was higher than that from the 'Abund: Logistic: Sgen-Ricker', so only the former method triggered an LRP breach. 
+In the years 2005-2006, SMU status for both the 'Abund: Proj: Sgen-Ricker' and 'Abund: Logistic:Sgen-Ricker' methods fell below the LRP, while the CU status-based methods (labelled 'Prop:') did not. Declines in aggregate SMU abundance in 2005-2006 were driven by declines in the four larger CUs (which, still remained above their individual S~gen~ estimates). Declines in the  abundance of the Fraser Canyon CU were not as drastic. As a result, while SMU-level aggregate abundance dropped below the abundance LRP, the Fraser Canyon CU that triggered Red status in 2015-2017 exceeded 1500 spawners and did not trigger the Prop: Scanner-Ricker method. The aggregate abundance LRP from the 'Abund: Proj: Sgen-Ricker' estimation method was higher than that from the 'Abund: Logistic: Sgen-Ricker', so only the former method triggered an LRP breach. 
 
 
 When the Ricker-priorCap model was used to estimate S~gen~ instead of the base Ricker model, both S~gen~ and LRP estimates were higher than under the base Ricker model formulation. This in turn resulted in more frequent LRP breaches when the Ricker-priorCap model was used (status bars 6-9 in Figure \@ref(fig:coho-statusPlot-withBars)).  Among the 'priorCap' methods, status was most frequently estimated to be below the LRP when the 'Abund: Proj:Sgen-priorCap' method was used; for this method, the LRP was triggered in 14 out of the 21 years between 2000 and 2020. In comparison, the LRP was triggered in 9, 9, and 8 of the 21 years for the 'Prop: Scanner-priorCap', 'Prop: Sgen-priorCap' and 'Abund: Logistic:Sgen-priorCap' methods, respectively.    
@@ -595,22 +598,22 @@ When the Ricker-priorCap model was used to estimate S~gen~ instead of the base R
 Finally, SMU status was below the LRP in four years (2006, 2015-2017) out of the 21 years for the 'Prop: IFCRT' method, but was only triggered in 2006 under the 'Abund: Logistic: IFCRT method' (status bars 10-11 Figure \@ref(fig:coho-statusPlot-withBars)). The 'Abund: Logistic: IFCRT method' produced the lowest LRP of all logistic methods (Figure \@ref(fig:coho-IM-logisticFit2020) and Table \@ref(tab:logisticLRPs2020)), therefore the LRP tended to get breached less often.  
 
 
-Despite the differences in status estimates in some years for proportional and aggregate abundance LRPs highlighted above, estimated status tended to match in more years than not for proportional and aggregate abundance methods. Out of the 21 years available for comparison, the number of years with consistent status estimates for proportional and aggregate abundance LRPs ranged from 15 - 18 years (71 - 86% of years), depending on the exact methods being compared. For the Base Ricker models, the proportion of years with consistent status estimates was lowest when comparing the Prop:Scanner-Ricker method to the Abund:Logistic:Sgen-Ricker and Abund:Proj:Sgen-Ricker methods (15 / 21 years; 72% for both comparisons).  These proportions were higher when comparing among the Ricker_priorCap models (86% and 81% for the same comparisons).
+Despite the differences in status estimates in some years for CU status-based and aggregate abundance LRPs highlighted above, estimated status tended to match in more years than not for CU status-based and aggregate abundance methods. Out of the 21 years available for comparison, the number of years with consistent status estimates for CU status-based and aggregate abundance LRPs ranged from 15 - 18 years (71 - 86% of years), depending on the exact methods being compared. For the Base Ricker models, the proportion of years with consistent status estimates was lowest when comparing the Prop:Scanner-Ricker method to the Abund:Logistic:Sgen-Ricker and Abund:Proj:Sgen-Ricker methods (15 / 21 years; 72% for both comparisons).  These proportions were higher when comparing among the Ricker_priorCap models (86% and 81% for the same comparisons).
   
 
 ## DISCUSSION
 
 
-The Interior Fraser Coho SMU is considered a data-rich SMU because it has stock-recruitment time series for all five CUs within the SMU, which allowed for the estimation of stock recruitment-based benchmarks (S~gen~). However, time series were restricted to years after 1998, when spawner abundance data were collected with more consistent methodologies and regularity. This period also aligns with the low productivity period [@deckerAssessmentInteriorFraser2014] when the SMU abundance is considered depressed relative to historical levels. Despite the short time series, Interior Fraser Coho are well-suited for looking at the application of aggregate abundance LRPs due to the long history of using aggregate abundance recovery targets and fisheries reference points [@ifcrtConservationStrategyCoho2006; @kormanEvaluationFrameworkAssessing2019; @arbeiderInteriorFraserCoho2020]. While we were able to estimate aggregate abundance LRPs using a suite of CU-level benchmarks and LRP estimation methods (logistic regression and projection), our results highlight variability in status against aggregate abundance LRPs that in some cases deviates from status against proportional LRPs. Our results also highlight the sensitivity of logistic regression based LRPs to data availability.
+The Interior Fraser Coho SMU is considered a data-rich SMU because it has stock-recruitment time series for all five CUs within the SMU, which allowed for the estimation of stock recruitment-based benchmarks (S~gen~). However, time series were restricted to years after 1998, when spawner abundance data were collected with more consistent methodologies and regularity. This period also aligns with the low productivity period [@deckerAssessmentInteriorFraser2014] when the SMU abundance is considered depressed relative to historical levels. Despite the short time series, Interior Fraser Coho are well-suited for looking at the application of aggregate abundance LRPs due to the long history of using aggregate abundance recovery targets and fisheries reference points [@ifcrtConservationStrategyCoho2006; @kormanEvaluationFrameworkAssessing2019; @arbeiderInteriorFraserCoho2020]. While we were able to estimate aggregate abundance LRPs using a suite of CU-level benchmarks and LRP estimation methods (logistic regression and projection), our results highlight variability in status against aggregate abundance LRPs that in some cases deviates from status against CU status-based LRPs. Our results also highlight the sensitivity of logistic regression based LRPs to data availability.
 
 
-### Proportional vs. Aggregate Abundance LRP Methods
+### CU status-based vs. Aggregate Abundance LRP Methods
 
-Comparisons of status between the abundance-based methods and the proportional methods yielded mixed results. While there were differences in the years in which proportional and aggregate-abundance based methods dropped below LRPs, status tended to match in more years than not. Out of the 21 years available for comparison, the number of years with consistent status estimates for proportional and aggregate abundance LRPs ranged from 15 - 18 years (72-86% of years), depending on the exact methods being compared.
+Comparisons of status between the abundance-based methods and the CU status-based methods yielded mixed results. While there were differences in the years in which CU status-based and aggregate-abundance based methods dropped below LRPs, status tended to match in more years than not. Out of the 21 years available for comparison, the number of years with consistent status estimates for CU status-based and aggregate abundance LRPs ranged from 15 - 18 years (72-86% of years), depending on the exact methods being compared.
 
-Consistency between proportional and aggregate abundance LRPs depended on the method used to assess CU status. For methods using the base Ricker model, status tended to drop below proportional LRPs when abundance of individual CUs was low (2000-2001, 2015-2017), and drop below aggregate abundance LRPs when aggregate abundances were low (2006-2007). As a result, proportional LRPs were breached in years with low abundance in only one CU (e.g, 2000, 2015-2017) whereas the aggregate abundance methods did not. In comparison, status was generally consistent for the scenarios in which the Ricker_priorCap model was used with LRPs breached in similar years. This result occurred because estimated S~gen~ and aggregate abundance LRPs were higher under the Ricker_priorCap model, which resulted in a more frequent occurrence of years with both aggregate abundance below the LRP and individual CUs below benchmarks. Finally, when the IFCRT distributional target was used, the proportional LRP was breached for 3 years in which the aggregate abundance was not (2015-2017) due to low abundance in one CU. 
+Consistency between CU status-based and aggregate abundance LRPs depended on the method used to assess CU status. For methods using the base Ricker model, status tended to drop below CU status-based LRPs when abundance of individual CUs was low (2000-2001, 2015-2017), and drop below aggregate abundance LRPs when aggregate abundances were low (2006-2007). As a result, CU status-based LRPs were breached in years with low abundance in only one CU (e.g, 2000, 2015-2017) whereas the aggregate abundance methods did not. In comparison, status was generally consistent for the scenarios in which the Ricker_priorCap model was used with LRPs breached in similar years. This result occurred because estimated S~gen~ and aggregate abundance LRPs were higher under the Ricker_priorCap model, which resulted in a more frequent occurrence of years with both aggregate abundance below the LRP and individual CUs below benchmarks. Finally, when the IFCRT distributional target was used, the CU status-based LRP was breached for 3 years in which the aggregate abundance was not (2015-2017) due to low abundance in one CU. 
 
-When considering proportional LRPs, comparisons between using a single metric benchmark to estimate CU status (i.e., S~gen~) and using a multidimensional approach yielded similar results. This occurred because the multidimensional algorithm relies on S~gen~ benchmarks when those are available. Exceptions occur when an estimated S~gen~ is less than the absolute threshold of 1500 spawners, as occurred for the Fraser Canyon CU. 
+When considering CU status-based LRPs, comparisons between using a single metric benchmark to estimate CU status (i.e., S~gen~) and using a multidimensional approach yielded similar results. This occurred because the multidimensional algorithm relies on S~gen~ benchmarks when those are available. Exceptions occur when an estimated S~gen~ is less than the absolute threshold of 1500 spawners, as occurred for the Fraser Canyon CU. 
 
 
 ### Structural Uncertainty in Spawner-Recruitment Dynamics
@@ -628,10 +631,10 @@ One approach to accounting for uncertainty in underlying model structure is to i
 
 Retrospective analyses of logistic regression LRP options showed that LRPs were sensitive to data availability, with LRP estimates changing over time as more data became available. In addition, relatively small shifts in estimated S~gen~ over time meant that logistic models based on S~gen~ were sometimes unable to converge on a solution even with more data. This failure to converge was a result of a lack of overlap between aggregate abundance levels associated with 'successes' and 'failures', which is a requirement for logistic models. This limitation did not occur for the IFCRT logistic regression approach, in which the absolute threshold used to define CU status was constant over time.
 
-Missing data scenarios, in which 1 or 2 CUs were removed from the data set, further highlighted limitations in the ability of the logistic regression models to converge on a solution given small changes in the pattern of 'successes' and 'failures'. In addition, we found that removing CUs in logistic regression LRPs resulted in an increase in uncertainty of estimated status.  However, despite these limitations, the 95% confidence intervals for the missing data scenarios usually overlapped with status based on all CUs being included. This result suggests that our assumption of CU representativeness for stock status within the Interior Fraser Coho SMU, as described in Appendix \@ref(app:coho-appendix), may be supported. Future work on this SMU (or, other SMUs wishing to apply these methods) could use retrospective analyses of proportional approaches to see whether status estimates remain stable when 1 or 2 CUs are removed from the data set.  The extent to which this result can be applied to other SMUs is expected to be dependent on the level of covariation in CU status among CUs within an SMU.
+Missing data scenarios, in which 1 or 2 CUs were removed from the data set, further highlighted limitations in the ability of the logistic regression models to converge on a solution given small changes in the pattern of 'successes' and 'failures'. In addition, we found that removing CUs in logistic regression LRPs resulted in an increase in uncertainty of estimated status.  However, despite these limitations, the 95% confidence intervals for the missing data scenarios usually overlapped with status based on all CUs being included. This result suggests that our assumption of CU representativeness for stock status within the Interior Fraser Coho SMU, as described in Appendix \@ref(app:coho-appendix), may be supported. Future work on this SMU (or, other SMUs wishing to apply these methods) could use retrospective analyses of CU status-based approaches to see whether status estimates remain stable when 1 or 2 CUs are removed from the data set.  The extent to which this result can be applied to other SMUs is expected to be dependent on the level of covariation in CU status among CUs within an SMU.
 
 
-Taken together, these retrospective results highlight that caution should be used when applying logistic regression LRPs. While they did provide similar estimates of SMU status as proportional methods for several (but not all) years in the historical comparison, they were sensitive to reductions in data availability. For the specific case of Interior Fraser Coho, retrospective performance may improve in the future as more data become available to improve the statistical power of logistic regression fits.
+Taken together, these retrospective results highlight that caution should be used when applying logistic regression LRPs. While they did provide similar estimates of SMU status as CU status-based methods for several (but not all) years in the historical comparison, they were sensitive to reductions in data availability. For the specific case of Interior Fraser Coho, retrospective performance may improve in the future as more data become available to improve the statistical power of logistic regression fits.
 
 ### Projection LRPs
 
