--- a/caseStudyWP/05-chap5.Rmd
+++ b/caseStudyWP/05-chap5.Rmd
@@ -91,7 +91,7 @@ For this case study, we consider two approaches for characterizing CU status:
 LW: The Scanner as we used it also has the absolute benchmark of 1500 / 10,000 fish. Although the percentile status can be calculated within the Salmon Scanner, the point in the paper is to compare the scanner with a simpler approach that won't be new for people. The Scanner uses additional metrics/benchmarks (e.g., absolute spawners against 1500/10,000), and this comparison of percentile approach vs Scanner shows how sensitive LRPs and assessments against LRP are to the additional metrics in the Scanner. -->
 
 
-The first approach is consistent with Canada's WSP and is recommended by Holt et al. (in review)<!--^[Holt *et. al.* Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper. In review]--> as the method that should be used to estimate CU status when using the proportional LRP approach. The second approach is presented for comparison with the multidimensional approach.<!--SG: Again, it isn’t really a separate approach.  The Scanner does both. You are just doing what we would recommend in an expert driven process. Look at the integrated status produced by the algorithm, and results for individual metrics, time series, etc. Our work has landed on the algorithm we have as the best way. LW: See above comment. -->
+The first approach is consistent with Canada's WSP and is recommended by Holt et al. (in review)<!--^[Holt *et. al.* Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper. In review]--> as the method that should be used to estimate CU status when using the CU status-based LRP approach. The second approach is presented for comparison with the multidimensional approach.<!--SG: Again, it isn’t really a separate approach.  The Scanner does both. You are just doing what we would recommend in an expert driven process. Look at the integrated status produced by the algorithm, and results for individual metrics, time series, etc. Our work has landed on the algorithm we have as the best way. LW: See above comment. -->
 
 
 When applying the multidimensional algorithm used within the Salmon Scanner to ISC Chum, we used percentile benchmarks when they were available for a CU. For CUs in which percentile benchmarks were not appropriate, the multidimensional algorithm used trends in spawner abundance as a basis for assessing CU status (Figure \@ref(fig:decision-tree)).  As a result, both of our approaches to CU status estimation depend at least partially on percentile benchmarks.
@@ -131,9 +131,11 @@ The methods for multidimensional assessments within the Salmon Scanner are descr
 
 ## LRP ESTIMATION: PROPORTION OF CUS
 
+*\textcolor{cyan}{LW: what should this heading be now? LRP ESTIMATION: CU STATUS-BASED?}*
+
 ### Methods
 
-To derive proportional LRPs, we calculated the proportion of CUs that had status estimates above the Red zone (or, above the lower percentile benchmark). As with the Interior Fraser Coho and WCVI Chinook case studies, we required all CUs to be above the Red zone for the ISC Chum SMU to be classified as being above the LRP. 
+To derive CU status-based LRPs, we calculated the proportion of CUs that had status estimates above the Red zone (or, above the lower percentile benchmark). As with the Interior Fraser Coho and WCVI Chinook case studies, we required all CUs to be above the Red zone for the ISC Chum SMU to be classified as being above the LRP. 
 
 
 The single-metric approach to assessing CU status based on percentiles has specific data requirements [@holtEvaluatingBenchmarksBiological2018] while the multidimensional approach can be applied to any CU with at least a consistent time-series of spawner abundances. <!--SG: Again, they are the same…Scanner can use percentiles as BM. LW: see above comment -->To compare LRPs based on CU assessment from these two approaches we compared data subsets including those that used the same data for each method, and all appropriate data for each method. We evaluated six different combinations of data and LRP methods (Table \@ref(tab:LRP-scenarios)). 
@@ -297,7 +299,7 @@ We found that SMU status can be below the LRP even if the aggregate abundance in
 ## DISCUSSION
 
 
-As a data-limited SMU, the ISC Chum case study had unique characteristics to inform the guidelines for LRP development. We found that only the proportional LRP were applicable to this SMU, which is based on individual CU status. Because there were no reliable stock-recruit parameter estimates, we relied on data-limited methods to estimate CU status. We assessed CU status based on abundance relative to percentile benchmarks alone, or on a combination of percentiles and trends<!--LW: also uses 1500 and 10000 fish thresholds, just didn't get below 1500 fish--> using the multidimensional algorithm within the Salmon Scanner. The use of the multidimensional algorithm was particularly valuable because percentile benchmarks were not appropriate for two of the CUs (Bute Inlet and Southern Coastal Streams, Table  \@ref(tab:CU-summary)). Missing data also required decisions to be made about which CUs to include in which years. We used this case study to explore how sensitive proportional LRPs were to the decisions on number of CUs, and years of data to include in the analysis.
+As a data-limited SMU, the ISC Chum case study had unique characteristics to inform the guidelines for LRP development. We found that only the CU status-based LRP were applicable to this SMU, which is based on individual CU status. Because there were no reliable stock-recruit parameter estimates, we relied on data-limited methods to estimate CU status. We assessed CU status based on abundance relative to percentile benchmarks alone, or on a combination of percentiles and trends<!--LW: also uses 1500 and 10000 fish thresholds, just didn't get below 1500 fish--> using the multidimensional algorithm within the Salmon Scanner. The use of the multidimensional algorithm was particularly valuable because percentile benchmarks were not appropriate for two of the CUs (Bute Inlet and Southern Coastal Streams, Table  \@ref(tab:CU-summary)). Missing data also required decisions to be made about which CUs to include in which years. We used this case study to explore how sensitive CU status-based LRPs were to the decisions on number of CUs, and years of data to include in the analysis.
 
 
 Using a multidimensional approach allowed us to include two CUs that did not have appropriate percentile benchmarks (Bute Inlet and Southern Coastal Streams). It allowed all seven CUs to be included when assessing SMU status by allowing alternative trend-based metrics to be considered. The seven-CU partial case provided the most pessimistic status of the scenarios considered as this approach used the most data. It resulted with the most years of the SMU being below the LRP (Figure \@ref(fig:chum-LRP-compare)). This multidimensional approach is especially useful for SMUs with a mix of data qualities and benchmark types, including those with and without relative abundance benchmarks. Like any approach to assess LRPs, the underlying data, and benchmarks applied (if abundance benchmarks can be used) should be verified by experts. In its current form, the multidimensional algorithm within th Salmon Scanner relies on whether abundance is $<$ 0.79$\times$ the long-term geometric average and whether abundances are $>$ 1500 in the absence of abundance-based benchmarks. It is worth noting that this long-term geometric average may also be sensitive to shifting baselines. This is another reason for experts to thoroughly review the data before any status assessment is made. 
@@ -318,11 +320,11 @@ Percentile benchmarks are used differently in Alaska and BC. In BC, percentiles 
 An additional source of uncertainty stems from spawner time series that may include the influence of enhancement, which introduces the risk of inflating wild spawner numbers and providing an overly optimistic status assessments. We removed three systems that are highly enhanced (Qualicum and Little Qualicum from spawning channels, and Puntledge from a hatchery) before infilling stream escapements, but hatchery influence may impact time-series for the remaining systems through production and/or straying [@lynchAssessmentEnhancedChum2020].
 
 
-We showed that increasing the number of CUs included in proportional LRP status assessment gave a more pessimistic status. This is not surprising given the low correlation of CUs within this SMU; we do not expect CUs to be interchangeable. Therefore, using as much data as possible will provide more realistic assessments of status, where those data are reliable. For this SMU where the status of two data-limited CUs, Upper Knight and Bute Inlet, cannot be inferred from data-rich CUs (see Section \@ref(chum-context)), omitting the data-limited CUs from analyses can result in either an SMU status that is data deficient or below the LRP depending on status of remaining data-rich CUs. When the status of at least one of the data-rich CUs is in the Red zone, the proportional LRP of 100% of CUs above the Red zone is considered breached. However, if the status of all data-rich CUs are above the Red zone, the SMU is considered data deficient if status of data-limited CUs is unknown because it cannot be inferred. In our case, we could assess status based on trends for these data-limited CUs as applied in the Salmon Scanner. However, in other SMUs, there may be cases where data to estimate trends are not available.
+We showed that increasing the number of CUs included in CU status-based LRP status assessment gave a more pessimistic status. This is not surprising given the low correlation of CUs within this SMU; we do not expect CUs to be interchangeable. Therefore, using as much data as possible will provide more realistic assessments of status, where those data are reliable. For this SMU where the status of two data-limited CUs, Upper Knight and Bute Inlet, cannot be inferred from data-rich CUs (see Section \@ref(chum-context)), omitting the data-limited CUs from analyses can result in either an SMU status that is data deficient or below the LRP depending on status of remaining data-rich CUs. When the status of at least one of the data-rich CUs is in the Red zone, the CU status-based LRP of 100% of CUs above the Red zone is considered breached. However, if the status of all data-rich CUs are above the Red zone, the SMU is considered data deficient if status of data-limited CUs is unknown because it cannot be inferred. In our case, we could assess status based on trends for these data-limited CUs as applied in the Salmon Scanner. However, in other SMUs, there may be cases where data to estimate trends are not available.
 
 
 We were not able to estimate aggregate abundance logistic regression LRPs for ISC Chum due to poor model fits of the underlying data. The data were not suited to logistic regression, and aggregate abundance was not a good predictor of the status of component CUs. Abundance for two CUs was regularly two orders of magnitude larger than the smaller CUs (Figure \@ref(fig:chum-spawner-distribution)), and correlation in abundances between CUs was generally low (Figure \@ref(fig:chum-spawner-corr)). Thus, aggregate abundance can be high mainly due to high abundance CUs while low abundance CUs have Red status, and the SMU is thus below the LRP. This pattern is exacerbated because the two most abundant CUs have the highest correlation in escapement with each other, and generally low correlation with the other CUs (Figure \@ref(fig:chum-spawner-corr)). This pattern is also the reason why SMU status can be below the LRP even as aggregate abundances increase (Figure \@ref(fig:chum-LRP-compare)). The large geographical range of the SMU, different numbers of populations within each CU, and variation in productivity, threats, and ecosystem conditions help explain these characteristics of the data.
 
 
-The CUs that were missing observations in some years and required CU-level infilling (Upper Knight and Bute Inlet) were not used in the aggregate abundance LRP analysis because the assumption that escapement is correlated between CUs ignores diversity between CUs and the potential for uncorrelated escapements. Unlike proportional LRPs, we did not consider status based on the multidimensional algorithm in the Salmon Scanner for aggregate abundance LRPs. It should also be noted that Upper Knight and Bute Inlet do not represent a random subset of the seven CUs in the Inside South Coast Chum SMU due to their location, watershed characteristics, near-shore marine environment, threats, and environmental conditions (Section \@ref(chum-context)). 
+The CUs that were missing observations in some years and required CU-level infilling (Upper Knight and Bute Inlet) were not used in the aggregate abundance LRP analysis because the assumption that escapement is correlated between CUs ignores diversity between CUs and the potential for uncorrelated escapements. Unlike CU status-based LRPs, we did not consider status based on the multidimensional algorithm in the Salmon Scanner for aggregate abundance LRPs. It should also be noted that Upper Knight and Bute Inlet do not represent a random subset of the seven CUs in the Inside South Coast Chum SMU due to their location, watershed characteristics, near-shore marine environment, threats, and environmental conditions (Section \@ref(chum-context)). 
 
